<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.myapplication.MainActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="160dp"
        android:layout_height="140dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0"
        android:text="@string/afl_monitoring"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        android:autoSizeTextType="uniform"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rectanglebg"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="inherit"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:autoSizeTextType="uniform"/>

    <EditText
        android:id="@+id/etPasw"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rectanglebg"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="inherit"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:autoSizeTextType="uniform"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/buttons"
        android:text="@string/log_in"
        android:textColor="@android:color/white" />

    <View
        android:layout_width="70dp"
        android:layout_height="2dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#808080" />

    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/textview"
        android:textColor="@android:color/holo_red_dark"
        tools:text="Forgot password?"
        android:focusable="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:background="#808080" />

    <TextView
        android:id="@+id/tvReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/don_t_have_an_account_register"
        android:textAlignment="center" />

</LinearLayout>